# CS-IT-08-Project

./: README.md  RainbowAlgorithm.py  RainbowTester.py  main_impala.py  play_coinrun_v2.py  recurrentppo.py  setseeds.py
PPO/C-Procgen_PPO/: README.md  pyproject.toml
PPO/C-Procgen_PPO/cprocgen/: __init__.py
PPO/C-Procgen_PPO/evaluation_pipeline/: behavioral_analysis.py  evaluation.py  gen_plot_graph.py  gen_raw_to_pres.py  vis.py  vis_plot_graph.py  vis_raw_to_pres.py
PPO/C-Procgen_PPO/procgen/: CMakeLists.txt  __init__.py  builder.py  default_context.py  env.py  gym_registration.py  libenv.py
PPO/C-Procgen_PPO/procgen/.build/relwithdebinfo/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  codegen.sln  env.vcxproj  env.vcxproj.filters
PPO/C-Procgen_PPO/procgen/.build/relwithdebinfo/RelWithDebInfo/: env.exp  env.lib
PPO/C-Procgen_PPO/procgen/src/: game.cpp  game.h  vecgame.cpp
PPO/C-Procgen_PPO/procgen/src/games/: coinrun.cpp
PPO/C-Procgen_PPO/tensorboard_logs/gen_sweep/natureCNN/: death_stats_summary.md  death_stats_summary.tex  levels_summary.md  levels_summary.tex  results.csv
PPO/C-Procgen_PPO/tensorboard_logs/vis_sweep/: results.csv  visibility_summary.md  visibility_summary.tex
PPO/C-Procgen_PPO/tensorboard_logs/vis_sweep/coinrun_8192_4_mixedvis_seed2026/: death_stats.json  events.out.tfevents.1779438097.ailab-l4-06.14.0  training_config.json
PPO/C-Procgen_PPO/training_pipeline/: cprocgen_impalaCNN_training.py  cprocgen_natureCNN_training.py  cprocgen_training.py
(+236 files in other folders)
