[project]
name = "cprocgen-cprocgen-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "argparse>=1.4.0",
    "cmake>=4.3.1",
    "gym>=0.26.2",
    "gym3>=0.3.3",
    "gymnasium>=1.2.3",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.3.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "rich>=15.0.0",
    "sb3-contrib>=2.8.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.8.0",
    "tabulate>=0.10.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.setuptools]
packages = ["cprocgen", "procgen"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
